--- a/FlightSimulator/FlightSimulator.csproj
+++ b/FlightSimulator/FlightSimulator.csproj
@@ -73,6 +73,7 @@
     <Compile Include="ViewModels\AutoPilotViewModels.cs" />
     <Compile Include="ViewModels\BaseNotify.cs" />
     <Compile Include="ViewModels\FlightBoardViewModel.cs" />
+    <Compile Include="ViewModels\MainWindowVM.cs" />
     <Compile Include="ViewModels\ManualVM.cs" />
     <Compile Include="ViewModels\PlaneBoardVM.cs" />
     <Compile Include="ViewModels\Windows\SettingsWindowViewModel.cs" />
